* Instinct Release 0.2.0 *

o Core features
  o Specification groups.
o Reductio Integration
  o Integrated Reductio, a tool for automated specification testing. See
    http://reductiotest.org/ for more information.
o Infrastructure
  o Jar file name change: instinct-core-0.2.0.jar (addition of "core", brings into line
    with Maven).
  o Parse lifecycle in builder, attach to specification method.


* Instinct Release 0.1.9 *

Maintenance release; Multiple specification failures reported, specification lifecycle
can now be customised, Scala examples, additional Functional Java matchers (List, Either,
Option), Maven bundle and a seperate source JAR.

o Core Features
  o Custom specification lifecycles can now be plugged in using the @Context annotation.
    This would allow for example, a Spring application context to be initialised and wired
    into each specification method allowing integration-style specifications using a Spring
    beans.
  o Multiple errors are now displayed when a specification fails with more than one exception.
o Expectation API
  o Added fj.data.List matchers:
    expect.that(List.nil().cons(1)).isEqualTo(List.nil().cons(1))
  o Added fj.data.Option matchers:
    expect.that(Some(1)).isSome(1), expect.that(foo.bar()).isNone().
  o Added fj.data.Either matchers:
    expect.that(error()).isLeft(runtimeException), expect.that(foo.bar()).isRight(42).
o Scala integration
  o Added Scala stack example, showing the use of Instinct under Scala to spec out Scala
    code.
o Maven integration
  o Added Maven bundle to allow uploading to central Maven repository, also available
    from this repository: http://instinct.googlecode.com/svn/artifacts/maven
o Packaging
  o Moved source code out of main jar into instinct-<version>-sources.jar (for Maven).
  o Moved javadoc into jar instead of zip instinct-<version>-javadoc.jar (for Maven).
o Infrastructure
  o Upgraded to Functional Java 2.10.